src/objects/Late_Reports_Review__c.object
<CustomObject>
    <fields>
        <fullName>Cases__c</fullName>
        <label># of Late Reports this PPE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Late Reports Review</relationshipLabel>
        <relationshipName>Late_Reports_Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Late_Report_Rating__c</fullName>
        <formula>IF(Cases__c =1, 1, 
If(Cases__c =2,2, 
IF(Cases__c &gt;=3,3,0) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late Report Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPE_End_Date__c</fullName>
        <inlineHelpText>Put the date of the Sunday ending PPE</inlineHelpText>
        <label>PPE End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Late Reports Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LR-{00000}</displayFormat>
        <label>Late Reports Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Late Reports Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>